alterações na página dos formulários

--- a/projeto-glass-html5/fale-conosco.html
+++ b/projeto-glass-html5/fale-conosco.html
@@ -1,47 +1,86 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
+<html>
 
-[AQUI ENTRA UMA FOTO]
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Tudo sobre Google</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="_css/estilo.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="_css/form.css" />
+    <script>
+        function calc_total() {
+            var qtde = parseInt(document.getElementById('cQtde').value);
+            tot = qtde * 1500;
+            document.getElementById('cTotal').value = tot;
+        }
+    </script>
+</head>
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+<body>
+    <p>
+        <form method="POST" id="fcontato" action="mailto:luisgustavogomes@outlook.com" oninput="calc_total();">
+            <fieldset id="usuario">
+                <legend>Identificação do Usuário</legend>
+                <p><label for="cnome">Nome:</label><input type="text" name="tnome" id="cnome" size="20" maxlength="80" placeholder="Nome completo" /></p>
+                <p><label for="csenha">Senha:</label><input type="password" name="tsenha" id="csenha" size="8" maxlength="8" placeholder="8 digitos" /></p>
+                <p><label for="cmail">E-mail:</label><input type="email" name="tmail" id="cmail" size="20" maxlength="100" placeholder="e-mail" /></p>
+                <fieldset id="sexo">
+                    <legend>Sexo</legend>
+                    <input type="radio" name="tsexo" id="cmasc" checked/><label for="cmasc">Masculino</label></br>
+                    <input type="radio" name="tsexo" id="cfem" /><label for="cfem">Feminino</label>
+                </fieldset>
+                <p><label for="cdata">Data de Nascimento:</label><input type="date" name="tdata" id="cdata" /></p>
+            </fieldset>
 
-Fale Conosco > Contato
-Formulário de Contato
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+            <fieldset id="endereco">
+                <legend>Endereço do Usuário</legend>
+                <p><label for="clogradouro">Logradouro:</label><input type="text" name="tlogradouro" id="clogradouro" size="13" maxlength="80" placeholder="Endereço completo..." /></p>
+                <p><label for="cnumero">Número:</label><input type="number" name="tnumero" id="cnumero" min="0" max="999999" /></p>
+                <p><label for="cestado">Estado:</label>
+                    <select name="testado" id="cestado">
+                        <optgroup label="Região Sudeste">
+                            <option value="RJ">Rio de Janeiro</option>
+                            <option value="SP">São paulo</option>
+                            <option value="MG">Minas Gerais</option>
+                        </optgroup>
+                        <optgroup label="Região Sul">
+                            <option value="PR">Paraná</option>
+                            <option value="SC">Santa Catariana</option>
+                            <option value="RS" selected>Rio Grande do Sul</option>
+                        </optgroup>
+                    </select>
+                </p>
+                <p><label for="ccidade">Cidade:</label>
+                    <input type="text" name="tcidade" id="ccidade" size="20" maxlength="40" placeholder="Sua Cidade" list="cidades" /></p>
+                <datalist id="cidades">
+                    <option value="Rio de Janeiro"></option>
+                    <option value="Nova iguaçu"></option>
+                    <option value="Niterói"></option>
+                    <option value="belford Roxo"></option>
+                </datalist>
+            </fieldset>
 
-Identificação do Usuário
-    Nome:
-    Senha:
-    E-mail:
-    Sexo:
-        - Masculino
-        - Feminino
-    Data de Nascimento:
+            <fieldset id="mensagem">
+                <legend>Mensagem do Usuário</legend>
+                <p><label for="cUrg">Grau de Urgência:</label> Min
+                    <input type="range" name="tUrg" id="cUrg" min="0" max="10" step="2">Max</p>
+                <p><label for="cMsg">Mensagem:</label>
+                    <textarea name "tMsg" id="cMsg" cols="35" rows="5" placeholder="Deixe aqui sua Mensagem"></textarea> </p>
+            </fieldset>
 
-Endereço do Usuário
-    Logradouro:
-    Número:
-    Estado:
-    Cidade:
+            <fieldset id="pedido">
+                <legend>Quero um Google Glass</legend>
+                <p><input type="checkbox" name="tped" id="cPed" checked><label for="cPed">Gostaria de adquirir um Google Glass quando disponível</label></p>
+                <p><label for="cCor">Cor:</label><input type="color" name="tCor" id="cCor" value="#EFF500"></p>
+                <p><label for="cQtde">Quantidade:</label><input type="number" name="tQtde" id="cQtde" min="0" max="100" value="0"></p>
+                <p><label for="cTotal">Preço Total:</label><input type="text" name="tTotal" id="cTotal" placeholder="Total a pagar" readonly></p>
+            </fieldset>
 
-Mensagem do Usuário
-    Grau de Urgência:
-    Mensagem:
+            <input type="submit" value="Enviar" />
+        </form>
+    </p>
 
-Quero um Google Glass
-    Gostaria de adquirir um Google Glass quando disponível
-    Cor:
-    Quantidade:
-    Preço Total: R$
+</body>
 
-
-[BOTÃO ENVIAR]
-
-Copyright 2013 - by Gustavo Guanabara
-Facebook | Twitter
+</html>
